# tinyscript

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  laze-project.yml
benches/: comparison.rs  equality.rs  expression.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: all.rs
derive/tests/enum/: 01-usage.rs  02-wrong-usage.rs  02-wrong-usage.stderr
embedded/: laze.yml
embedded/ariel-os/: laze.yml
embedded/ariel-os/testing/: Cargo.toml  laze.yml
embedded/testing/: Cargo.toml
embedded/testing/tests/: test.rs
examples/repl/: main.rs
src/: environment.rs  error.rs  lib.rs  prelude.rs  runtime.rs  scripting_value.rs
src/compilation/: error.rs  lexer.rs  mod.rs  parser.rs  precedence.rs  token.rs
src/compilation/parselets/: assignment_parselet.rs  binary_parselet.rs  grouping_parselet.rs  literal_parselet.rs  logic_parselet.rs  mod.rs  unary_parselet.rs  value_parselet.rs
src/compiling/: lexer.rs  mod.rs  parser.rs  precedence.rs  token.rs
src/compiling/parselets/: assignment_parselet.rs  binary_parselet.rs  grouping_parselet.rs  literal_parselet.rs  logic_parselet.rs  mod.rs  unary_parselet.rs  value_parselet.rs
src/execution/: chunk.rs  error.rs  mod.rs  op_code.rs  scripting_value.rs  vm.rs
supply-chain/: config.toml
tests/: bool.rs  expressions.rs  lexing.rs  logic_operators.rs  normal.rs  operators.rs  variables.rs
