# Copyright © 2025 Stephan Kunz

[package]
name = "tinyscript"
version = "0.1.1"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]
license = "MIT OR Apache-2.0"
description = "Tiny, C-like scripting language"
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/stepkun/tinyscript"
documentation = "https://docs.rs/tinyscript"
readme = "README.md"
exclude = [
    "benches/**",
    "examples/**",
    "tests/**",
]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
#unused="allow" # for dev only

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[[bench]]
name = "equality"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "expression"
harness = false

[lints]
workspace = true

[dependencies]
tinyscript-derive = { path = "derive", version = "0.1.1"}
parking_lot = "0.12.4"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.7.0"
rstest = "0.26.1"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 's'			# Optimize for size.
lto = true				# Enable Link Time Optimisation
codegen-units = 1		# Reduced to increase optimisations
overflow-checks = true	# useful

[profile.production]
inherits="release"
panic = 'abort'		    # Abort on panic
strip = "symbols"	    # Strip symbols from binary

[profile.samply]
inherits = "release"
debug = true		    # Create debug symbols for profiling
